# sanjaya

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
api/: README.md  pyproject.toml
api/sanjaya_api/: main.py  models.py  trace_events.py
api/sanjaya_api/routes/: benchmark_jobs.py  mmou_jobs.py  runs.py
api/sanjaya_api/services/: benchmark_jobs.py  mmou_jobs.py  orchestrator.py
scripts/: run_mmou_flash_same_questions.py  run_mmou_rlm.py  run_video_benchmarks.py
src/sanjaya/: agent.py  model_defaults.py  prompts.py  settings.py
src/sanjaya/benchmarks/: __init__.py  mmou_adapter.py  mmou_cli.py
src/sanjaya/core/: errors.py  loop.py  prompts.py  repl.py  schema.py
src/sanjaya/llm/: client.py  types.py
src/sanjaya/tools/: builtins.py
src/sanjaya/tools/video/: media.py  toolkit.py  transcription.py  workspace.py
src/sanjaya/tracing/: loader.py  tracer.py
tests/: test_benchmark_job_service.py  test_llm_client_retries.py  test_mmou_job_routes.py  test_mmou_job_service.py  test_mmou_rlm_adapter.py  test_mmou_rlm_script.py  test_video_native_rlm.py
ui/app/: page.tsx
ui/app/api/benchmarks/: route.ts
ui/app/api/frames/: route.ts
ui/app/api/history/: route.ts
ui/app/api/history/[runId]/: route.ts
ui/app/api/traces/: route.ts
ui/components/: navbar.tsx
ui/components/benchmark/: benchmark-launcher.tsx  mmou-launcher.tsx  summary-header.tsx
ui/components/hud/: final-answer-panel.tsx  query-input.tsx  run-detail-modal.tsx  token-counter.tsx  trace-timeline.tsx
ui/lib/: api.ts  trace-events.ts  types.ts  use-run.ts
