[project]
name = "sanjaya"
version = "0.2.1"
description = "Video-only RLM runner for MMOU with Gemini and OpenAI transcripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Prathamesh Sarang", email = "prthamesh.sarang@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.2.0",
    "pydantic-monty>=0.0.9",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=14.0",
    "genai-prices>=0.0.56",
    "nest-asyncio>=1.6.0",
    "openai>=2.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.43.0",
    "huggingface-hub[cli]>=1.9.0",
]

[project.scripts]
sanjaya-mmou = "sanjaya.benchmarks.mmou_cli:main"

[project.urls]
Homepage = "https://github.com/pratos/sanjaya"
Repository = "https://github.com/pratos/sanjaya"
Issues = "https://github.com/pratos/sanjaya/issues"

[project.optional-dependencies]
video = ["logfire", "Pillow>=10.0"]
tracing = ["logfire"]
all = ["sanjaya[video,tracing]"]
benchmarks = [
    "datasets>=3.0",
    "numpy>=1.26",
    "Pillow>=10.0",
]
dev = [
    "ruff",
    "pytest",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["setuptools>=78"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.pyright]
include = ["src"]
exclude = ["temp"]
ignore = []
defineConstant = { DEBUG = false }

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sanjaya*"]
